feat: added appointments CRUD
